# smartnotice

BroadcastReception/: CMakeLists.txt  main.cc
EmergCall/: CMakeLists.txt  main.cc
GUI/: anncedetailwindow.ui  anncelistwindow.cpp  emrgcallwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
deep_learning/: CrossValidation.py  Metrics.py  ProcessData.py  model_architecture.h5  process.py  rTPNN.py  run.py
embedded/GUI/: anncedetailwindow.cpp  anncedetailwindow.h  anncelistwindow.h  anncelistwindow.ui  capstone.pro  emrgcallwindow.cpp  emrgcallwindow.h  info.h
embedded/sensor/: main.cc
embedded/sensor/measure/get_oxygen_data/: get_oxygen_data.py
sensor/: CMakeLists.txt
sensor/measure/get_lux_data/: get_lux_data.py
sensor/measure/get_motion_data/: get_motion_data.py
sensor/measure/get_temp_data/: get_temp_data.py
